HM9 CHANGE:change asList() ot of()